--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/kp/dashboard">
+                            <i class="fas fa-dungeon"></i> 守密人帷幕
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#diceLogCanvas">
                             <i class="fas fa-scroll"></i> 历史记录
                         </a>
