http polling for inv.list and kp.db

--- a/templates/create.html
+++ b/templates/create.html
@@ -150,7 +150,7 @@
                         <div class="w-100"></div>
                         {{ stat_input('生命上限', 'hp_max', inv.hp_max if inv else 10) }}
                         {{ stat_input('魔法上限', 'mp_max', inv.mp_max if inv else 10) }}
-
+                        {{ stat_input('体格', 'build_stat', inv.build_stat if inv else 0) }}
                     </div>
                 </div>
             </div>
