http polling for inv.list and kp.db

--- a/templates/snippets/kp_dashboard_teams.html
+++ b/templates/snippets/kp_dashboard_teams.html
@@ -90,10 +90,10 @@
                                 <div>👊 {{ inv.fighting_brawl }} | 🔫 {{ inv.firearms_handgun }}</div>
                             </td> <td>
                                 <div class="btn-group btn-group-sm">
-                                    <a href="/investigators/inspect/{{ inv.id }}" class="btn btn-outline-success" title="检验">
+                                    <a href="/investigators/inspect/{{ inv.id }}" class="btn btn-outline-success" title="检验" target="_blank">
                                         <i class="fas fa-clipboard-check"></i>
                                     </a>
-                                    <a href="/investigators/edit/{{ inv.id }}" class="btn btn-outline-primary" title="编辑">
+                                    <a href="/investigators/edit/{{ inv.id }}" class="btn btn-outline-primary" title="编辑" target="_blank">
                                         <i class="fas fa-edit"></i>
                                     </a>
                                 </div>
